# git_viewer

./: .gitignore  LICENSE  README.md  git_history_viewer.py  pyproject.toml
git_history_viewer/: __init__.py  assets.py  cli.py  filters.py  git_client.py  history.py  jobs.py  models.py  numstat.py  payloads.py  server.py
git_history_viewer/static/: app.js  styles.css
git_history_viewer/templates/: index.html
